@@ -1,3 +1,8 @@
+2003-07-01  Pascal Scheffers  <pascal@scheffers.net>
+	* tkchat.tcl: Update so /me messages from ircbridge show up
+	correctly again. Changed the old regexp so it matches at the
+	beginning only.
+
 2003-05-13  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl: simplify find stuff, add support for
